@@ -9,7 +9,7 @@ use DynaLoader();
 use Carp ();
 @ISA = qw(DynaLoader);
 
-$VERSION = '3.0004_1';
+$VERSION = '3.0005_1';
 
 bootstrap DBD::mysql $VERSION;
 
